# board_game_site

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
set_game_project/: db.sqlite3  manage.py  mypy.ini  pytest.ini  start_daphne.sh
set_game_project/set_game/: apps.py  archive.py  consumers.py  models.py  routing.py  urls.py  utils.py  views.py
set_game_project/set_game/management/commands/: cleanup_sessions.py  cleanup_stale_lobbies.py  delete_cards.py  populate_cards.py
set_game_project/set_game/migrations/: 0001_initial.py  0002_gamesession_last_activity_lobby_last_activity.py  0002_gamesession_state.py  0002_lobbyplayer_last_activity.py  0003_lobby_gamestate.py  0004_alter_gamestate_lobby.py
set_game_project/set_game/static/css/: style.css
set_game_project/set_game/static/js/: game.js
set_game_project/set_game/static/set_game/css/: game.css  home.css  lobby.css
set_game_project/set_game/static/set_game/js/: game.js  lobby.js
set_game_project/set_game/templates/: game.html
set_game_project/set_game/templates/set_game/: game_board.html  home.html  lobby.html
set_game_project/set_game/tests/: conftest.py  test_consumers.py  test_forms.py  test_models.py  test_views.py
set_game_project/set_game_project/: asgi.py  settings.py  urls.py  wsgi.py
set_game_project/staticfiles/js/: game.js
set_game_project/staticfiles/set_game/css/: game.css  home.css
set_game_project/staticfiles/set_game/js/: game.js  lobby.js
