[tool.poetry]
name = "set-game-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
channels = "^4.1.0"
channels-redis = "^4.2.0"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.7"
gunicorn = "^22.0.0"
daphne = "^4.1.2"
django-webtest = "^1.9.12"
ruff = "^0.11.4"
mypy = "^1.15.0"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"
python-dotenv = "^1.1.0"
uvloop = "^0.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
django-stubs = "^5.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
